--- a/style.css
+++ b/style.css
@@ -32,9 +32,15 @@ body {
   padding-top: 3rem;
   flex: 1;
 }
-.date {
+.time {
   padding-bottom: 2rem;
-  font-size: 8vh;
+  font-size: 14vh;
+}
+
+@media screen and (max-width: 760px) {
+  .time {
+    font-size: 8.5vh;
+  }
 }
 
 .description {
