--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-color: #2f4f4f;
   color: #dcdcdc;
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
@@ -32,13 +33,21 @@ body {
   padding-top: 3rem;
   flex: 1;
 }
+
+.video {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 .date {
   padding-bottom: 1rem;
   font-size: 5vh;
+  z-index: 2;
 }
 .time {
   padding-bottom: 2rem;
   font-size: 14vh;
+  z-index: 2;
 }
 
 @media screen and (max-width: 760px) {
@@ -56,15 +65,18 @@ body {
   background: rgba(0, 0, 0, 0.5);
   margin: 0 auto;
   position: relative;
+  z-index: 2;
 }
 .title {
   padding-top: 1rem;
+  z-index: 2;
 }
 .text {
   padding: 1rem 2rem;
   line-height: 1.5;
   font-size: 1.15rem;
   text-align: justify;
+  z-index: 2;
 }
 
 .btn {
@@ -78,6 +90,7 @@ body {
   letter-spacing: 1px;
   display: inline-flex;
   justify-content: space-between;
+  z-index: 2;
 }
 .btn:hover {
   transform: scale(1.3);
@@ -108,6 +121,7 @@ body {
   justify-content: space-between;
   letter-spacing: 2px;
   font-size: 0.9rem;
+  z-index: 2;
 }
 
 .footer a {
